# Bishop-frame

./: README.md  binding.py  bishop_gui.py  run.py
bishoplib/: CMakeLists.txt  bishoplib.pc.in
bishoplib/include/: bishop.hpp
bishoplib/src/: bishop.cpp
